Color select next arrow doesn't appear until you've selected all the players.

--- a/gui/colorselect.kv
+++ b/gui/colorselect.kv
@@ -142,8 +142,8 @@
 
         MDBottomAppBar:
             MDToolbar:
+                id: colorbottomtoolbar
                 icon: "square-rounded-outline"
                 type: "bottom"
                 on_action_button: app.on_pause()
                 left_action_items: [["chevron-left", lambda x: root.previousscreen()]]
-                right_action_items: [["chevron-right", lambda x: root.nextscreen()]]
