--- a/gui/playeramount.kv
+++ b/gui/playeramount.kv
@@ -11,6 +11,7 @@
         orientation: "vertical"
 
         MDToolbar:
+            id: infomenu
             title: "C0de.Net"
             right_action_items: [["information-outline", lambda x: root.openinfo()]]
 
@@ -34,7 +35,7 @@
                 text_color: app.theme_cls.primary_color
                 theme_text_color: "Custom"
                 font_style: 'Subtitle1'
-                text: "Greetings [color=#FFFFFF]host[/color], please select the [color=#FFFFFF]amount[/color] of [color=#FFFFFF]players[/color] that are currently playing."
+                text: "Greetings, please select the [color=#FFFFFF]amount[/color] of [color=#FFFFFF]players[/color] that are currently playing."
                 halign: "center"
                 markup: True
 
