--- a/gui/maininformation.kv
+++ b/gui/maininformation.kv
@@ -12,13 +12,68 @@
             id: maininfoscreenmanager
 
             MDScreen:
+                name: "Lore"
+
+                MDBoxLayout:
+                    orientation: "vertical"
+
+                    MDToolbar:
+                        title: f"[font=Icons]{md_icons['book']}[/font] Lore"
+                        left_action_items: [["menu", lambda x: nav_drawer.set_state("open")]]
+                        right_action_items: [["close", lambda x: root.close()]]
+
+                    ScrollView:
+                        bar_width: 10
+                        bar_color: C('FFFFFF')
+
+                        MDBoxLayout:
+                            orientation: "vertical"
+                            size_hint: None, None
+                            height: self.minimum_height
+                            size: (root.width, root.height)
+                            spacing: 10
+                            padding: 21
+
+                            MDLabel:
+                                adaptive_height: True
+                                text_color: C('FFFFFF')
+                                theme_text_color: "Custom"
+                                font_style: 'H6'
+                                text: "Introduction"
+                                markup: True
+
+                            MDLabel:
+                                adaptive_height: True
+                                text_color: app.theme_cls.primary_color
+                                theme_text_color: "Custom"
+                                font_style: 'Body2'
+                                text: "It is 2090 and all systems have been digitalized. Unfortunately, this has led to breaches in security. With more than ninety percent of the workforce being programmers, crimes against public software have significantly increased, which have caused disruption for all societies. You are part of Code.Net, a private government organization which intended to sustain order over every network worldwide. You and your group is tasked with Project Sanctuary."
+                                markup: True
+
+                            MDLabel:
+                                adaptive_height: True
+                                text_color: C('FFFFFF')
+                                theme_text_color: "Custom"
+                                font_style: 'H6'
+                                text: "Project Sanctuary"
+                                markup: True
+
+                            MDLabel:
+                                adaptive_height: True
+                                text_color: app.theme_cls.primary_color
+                                theme_text_color: "Custom"
+                                font_style: 'Body2'
+                                text: "The purpose of Project Sanctuary is to get in the mind of hackers and coders so the organization is able to differentiate the two with the proper tools available to them. In doing so, we can continue to retain order across all networks. You will be given an alignment and to your best ability, you will attempt to accomplish your objective. Your performance will be scored and it is encouraged that your group will make multiple attempts in this process so we can choose the best candidate for the next task."
+                                markup: True
+
+            MDScreen:
                 name: "Alignments"
 
                 MDBoxLayout:
                     orientation: "vertical"
 
                     MDToolbar:
-                        title: "Alignments"
+                        title: f"[font=Icons]{md_icons['shield']}[/font] Alignments"
                         left_action_items: [["menu", lambda x: nav_drawer.set_state("open")]]
                         right_action_items: [["close", lambda x: root.close()]]
 
@@ -206,7 +261,7 @@
                     orientation: "vertical"
 
                     MDToolbar:
-                        title: "Players"
+                        title: f"[font=Icons]{md_icons['account']}[/font] Players"
                         left_action_items: [["menu", lambda x: nav_drawer.set_state("open")]]
                         right_action_items: [["close", lambda x: root.close()]]
 
@@ -368,25 +423,6 @@
                                 text: "An AI is present when there is a low amount of human players. This is intended to retain the hacker's anonymity. The AI is capable of becoming a hacker or a coder. Unfortunately the AI cannot communicate in any way. This can be both detrimental and beneficial for all players from different alignments."
                                 markup: True
 
-                            MDSeparator:
-                                color: C("FFFFFF")
-
-                            MDLabel:
-                                adaptive_height: True
-                                text_color: C('FFFFFF')
-                                theme_text_color: "Custom"
-                                font_style: 'H6'
-                                text: "Human"
-                                markup: True
-
-                            MDLabel:
-                                adaptive_height: True
-                                text_color: app.theme_cls.primary_color
-                                theme_text_color: "Custom"
-                                font_style: 'Body2'
-                                text: "Coders must work together to figure out who the hackers are with the assistance of items and logs. Unfortunately, these tools will never provide definite information. Therefore coders must be aware of deception, use process of elimination, and make informed decisions."
-                                markup: True
-
             MDScreen:
                 name: "Rounds"
 
@@ -420,7 +456,7 @@
                             markup: True
 
             MDScreen:
-                name: "Item"
+                name: "Actions"
 
                 MDBoxLayout:
                     orientation: "vertical"
@@ -459,7 +495,7 @@
                         text: "Screen 3"
 
         MDNavigationDrawer:
-            size_hint: 0.5, 1
+            size_hint: 0.6, 1
             padding: "8dp"
             spacing: "8dp"
             id: nav_drawer
@@ -467,6 +503,22 @@
 
             ScrollView:
                 MDList:
+                    OneLineListItem:
+                        text: f"[size=26][font=Icons]{md_icons['information-outline']}[/font][/size] [size=19]Information[/size]"
+                        theme_text_color: "Custom"
+                        text_color: C('FFFFFF')
+                        on_release:
+                            nav_drawer.set_state("close")
+
+                    OneLineListItem:
+                        text_color: C('FFFFFF')
+                        text: f"[size=22][font=Icons]{md_icons['book']}[/font][/size] Lore"
+                        theme_text_color: "Custom"
+                        markup: True
+
+                        on_release:
+                            nav_drawer.set_state("close")
+                            maininfoscreenmanager.current = "Lore"
 
                     OneLineListItem:
                         text_color: C('FFFFFF')
@@ -500,13 +552,13 @@
 
                     OneLineListItem:
                         text_color: C('FFFFFF')
-                        text: f"[size=22][font=Icons]{md_icons['cards']}[/font][/size] Items"
+                        text: f"[size=22][font=Icons]{md_icons['file-code']}[/font][/size] Actions"
                         theme_text_color: "Custom"
                         markup: True
 
                         on_release:
                             nav_drawer.set_state("close")
-                            maininfoscreenmanager.current = "Item"
+                            maininfoscreenmanager.current = "Actions"
 
                     OneLineListItem:
                         text_color: C('FFFFFF')
@@ -517,239 +569,3 @@
                         on_release:
                             nav_drawer.set_state("close")
                             maininfoscreenmanager.current = "Log"
-
-
-#
-#                icon: "account"
-#
-#                text: "Role"
-
-#                MDBoxLayout:
-#                    orientation: "vertical"
-#                    spacing: 10
-#                    padding: 21
-#
-#                    MDLabel:
-#                        adaptive_height: True
-#                        text_color: C('FFFFFF')
-#                        theme_text_color: "Custom"
-#                        font_style: 'H6'
-#                        text: "Factions"
-#                        markup: True
-#
-#                    MDLabel:
-#                        adaptive_height: True
-#                        text_color: app.theme_cls.primary_color
-#                        theme_text_color: "Custom"
-#                        font_style: 'Body2'
-#                        text: "Players are split up into two different factions, hackers and coders. The AI is a computer that assists the hacker's anonymity when the amount of players are low. It is not a faction on it's own. The AI may be a coder or a hacker."
-#                        markup: True
-#
-#            MDNavigationRailItem:
-#                icon: "timer"
-#                text: "Time"
-#
-#            MDNavigationRailItem:
-#                icon: "cards"
-#                text: "Item"
-#
-#            MDNavigationRailItem:
-#                icon: "folder"
-#                text: "Log"
-
-#        MDBoxLayout:
-#            orientation: "vertical"
-#            spacing: 10
-#            padding: 21
-#
-#            MDLabel:
-#                adaptive_height: True
-#                text_color: C('FFFFFF')
-#                theme_text_color: "Custom"
-#                font_style: 'H6'
-#                text: "Factions"
-#                markup: True
-#
-#            MDLabel:
-#                adaptive_height: True
-#                text_color: app.theme_cls.primary_color
-#                theme_text_color: "Custom"
-#                font_style: 'Body2'
-#                text: "Players are split up into two different factions, hackers and coders. The AI is a computer that assists the hacker's anonymity when the amount of players are low. It is not a faction on it's own. The AI may be a coder or a hacker."
-#                markup: True
-#----------------------
-#
-#    MDCard:
-#        orientation: "vertical"
-##        padding: 21, 0, 21, 21
-##        spacing: 5
-#        md_bg_color: app.theme_cls.primary_color
-
-#        MDBoxLayout:
-#            orientation: "horizontal"
-
-#        MDFloatLayout:
-#            MDIconButton:
-#                pos_hint: {"x": 0, "top": 1}
-#                size_hint: None, None
-#                icon: "menu"
-#
-#            MDLabel:
-#                pos_hint: {"x": 0, "top": 1}
-##                title_size: 10
-#                text: "Information"
-#                font_style: "H4"
-##                size_hint: None, None
-#                size_hint_y: None
-#                height: self.texture_size[1]
-#                halign: "center"
-#                theme_text_color: "Custom"
-#                text_color: C("FFFFFF")
-
-#        MDToolbar:
-##            size_hint_y: None
-#            title: "Information"
-#            anchor_title: "center"
-#            left_action_items: [["menu", lambda x: x]]
-#
-#        MDSeparator:
-#            pos_hint: {"center_x": 0.5}
-#            size_hint_x: 0.85
-#            color: C("FFFFFF")
-#
-#        MDBoxLayout:
-#            orientation: "vertical"
-#            padding: 21
-
-    #        MDTabs:
-    #            indicator_color: C('FFFFFF')
-    #            text_color_active: C('FFFFFF')
-    #            text_color_normal: C('FFFFFF')
-    #            tab_hint_x: True
-    #            tab_indicator_anim: True
-    #            allow_stretch: True
-    #
-    #            Tab:
-    #                icon: "account"
-    #
-#            MDBoxLayout:
-#                orientation: "vertical"
-#                spacing: 5
-#
-#                MDBoxLayout:
-#                    size_hint: 1, 0.1
-
-#            MDLabel:
-#                halign: "left"
-#                text_color: C("FFFFFF")
-#                font_style: "Subtitle1"
-#                text: f"[font=Icons]{md_icons['account']}[/font]: AI"
-#                theme_text_color: "Custom"
-#                adaptive_height: True
-#                markup: True
-#
-#            MDLabel:
-#                halign: "left"
-#                text_color: C("FFFFFF")
-#                font_style: "Subtitle1"
-#                text: f"[color=#c62828][font=Icons]{md_icons['account']}[/font][/color]: Hacker"
-#                theme_text_color: "Custom"
-#                adaptive_height: True
-#                markup: True
-#
-#            MDLabel:
-#                halign: "left"
-#                text_color: C("FFFFFF")
-#                font_style: "Subtitle1"
-#                text: f"[color=#1565c0][font=Icons]{md_icons['account']}[/font][/color]: Players"
-#                theme_text_color: "Custom"
-#                adaptive_height: True
-#                markup: True
-#
-#            MDSeparator:
-#                color: C("FFFFFF")
-#
-#            MDLabel:
-#                md_bg_color: app.theme_cls.primary_dark
-#                halign: "center"
-#                text_color: C("FFFFFF")
-#                font_style: "Subtitle1"
-#                text: f"[font=Icons]{md_icons['account-group']}[/font] 4 Players: [size=19][font=Icons]{md_icons['account']}{md_icons['numeric-1-circle']}[color=#c62828]{md_icons['account']}{md_icons['numeric-2-circle']}[/color][color=#1565c0]{md_icons['account']}{md_icons['numeric-4-circle']}[/color][/font][/size]"
-#                theme_text_color: "Custom"
-#                adaptive_height: True
-#                markup: True
-#
-#            MDLabel:
-#                halign: "center"
-#                text_color: C("FFFFFF")
-#                font_style: "Subtitle1"
-#                theme_text_color: "Custom"
-#                adaptive_height: True
-#                markup: True
-#                md_bg_color: app.theme_cls.primary_dark
-#                text: f"[font=Icons]{md_icons['account-group']}[/font] 5 Players: [size=19][font=Icons]{md_icons['account']}{md_icons['numeric-1-circle']}[color=#c62828]{md_icons['account']}{md_icons['numeric-2-circle']}[/color][color=#1565c0]{md_icons['account']}{md_icons['numeric-5-circle']}[/color][/font][/size]"
-#
-#            MDLabel:
-#                md_bg_color: app.theme_cls.primary_dark
-#                halign: "center"
-#                text_color: C("FFFFFF")
-#                font_style: "Subtitle1"
-#                theme_text_color: "Custom"
-#                adaptive_height: True
-#                markup: True
-#                text: f"[font=Icons]{md_icons['account-group']}[/font] 6 Players: [size=19][font=Icons]{md_icons['account']}{md_icons['numeric-0-circle']}[color=#c62828]{md_icons['account']}{md_icons['numeric-2-circle']}[/color][color=#1565c0]{md_icons['account']}{md_icons['numeric-6-circle']}[/color][/font][/size]"
-#
-#            MDLabel:
-#                halign: "center"
-#                font_style: "Subtitle1"
-#                theme_text_color: "Custom"
-#                text_color: C("FFFFFF")
-#                adaptive_height: True
-#                markup: True
-#                md_bg_color: app.theme_cls.primary_dark
-#                text: f"[font=Icons]{md_icons['account-group']}[/font] 7 Players: [size=19][font=Icons]{md_icons['account']}{md_icons['numeric-0-circle']}[color=#c62828]{md_icons['account']}{md_icons['numeric-2-circle']}[/color][color=#1565c0]{md_icons['account']}{md_icons['numeric-7-circle']}[/color][/font][/size]"
-#
-#            MDLabel:
-#                md_bg_color: app.theme_cls.primary_dark
-#                halign: "center"
-#                font_style: "Subtitle1"
-#                theme_text_color: "Custom"
-#                text_color: C("FFFFFF")
-#                adaptive_height: True
-#                markup: True
-#                text: f"[font=Icons]{md_icons['account-group']}[/font] 8 Players: [size=19][font=Icons]{md_icons['account']}{md_icons['numeric-0-circle']}[color=#c62828]{md_icons['account']}{md_icons['numeric-2-circle']}[/color][color=#1565c0]{md_icons['account']}{md_icons['numeric-8-circle']}[/color][/font][/size]"
-#
-#            MDLabel:
-#                halign: "center"
-#                font_style: "Subtitle1"
-#                theme_text_color: "Custom"
-#                text_color: C("FFFFFF")
-#                adaptive_height: True
-#                markup: True
-#                md_bg_color: app.theme_cls.primary_dark
-#                text: f"[font=Icons]{md_icons['account-group']}[/font] 9 Players: [size=19][font=Icons]{md_icons['account']}{md_icons['numeric-0-circle']}[color=#c62828]{md_icons['account']}{md_icons['numeric-3-circle']}[/color][color=#1565c0]{md_icons['account']}{md_icons['numeric-9-circle']}[/color][/font][/size]"
-#
-#            MDBoxLayout:
-    #
-    #            Tab:
-    #                icon: "timer"
-    #
-    #            Tab:
-    #                icon: "folder"
-    #
-    #            Tab:
-    #                icon: "cards"
-#
-#            MDBoxLayout:
-#                size_hint: 1, 0.02
-#
-#            MDRectangleFlatButton:
-#                font_style: "Button"
-#                theme_text_color: "Custom"
-#                pos_hint: {"center_x": 0.5, "center_y": 0.5}
-#                md_bg_color: app.theme_cls.primary_dark
-#                line_color: C("FFFFFF")
-#                text_color: C("FFFFFF")
-#                text: "OK"
-#                on_release:
-#                    root.dismiss()
