--- a/gui/revealdirections.kv
+++ b/gui/revealdirections.kv
@@ -9,8 +9,10 @@
 
     MDBoxLayout:
         orientation: "vertical"
+
         MDToolbar:
             title: "C0de.Net"
+            right_action_items: [["information-outline", lambda x: root.openinfo()]]
 
         MDStackLayout:
             spacing: 10
