--- a/gui/welcome.kv
+++ b/gui/welcome.kv
@@ -12,6 +12,7 @@
 
         MDToolbar:
             title: "C0de.Net"
+            right_action_items: [["information-outline", lambda x: root.openinfo()]]
 
         MDStackLayout:
             spacing: 10
