--- a/gui/revealdirections.kv
+++ b/gui/revealdirections.kv
@@ -23,7 +23,7 @@
                 text_color: C("FFFFFF")
                 theme_text_color: "Custom"
                 font_style: "H4"
-                text: "Identity Reveal"
+                text: "Reveal"
                 halign: "center"
 
             MDSeparator:
