--- a/codenet.kv
+++ b/codenet.kv
@@ -34,7 +34,7 @@ WindowManager:
     AnchorLayout:
         anchor_x: "right"
         anchor_y: "top"
-        padding: 0, 27, 0, 0
+        padding: 0, 90, 10, 0
         MDLabel:
             id: playeridentifer
             halign: "right"
@@ -48,7 +48,7 @@ WindowManager:
     AnchorLayout:
         anchor_x: "left"
         anchor_y: "top"
-        padding: 0, 27, 0, 0
+        padding: 10, 90, 0, 0
         MDLabel:
             id: alignmentidentifer
             size_hint: None, None
@@ -77,7 +77,7 @@ WindowManager:
                 font_style: "H4"
                 halign: "center"
                 text_color: C("FFFFFF")
-                text: "Round"
+                text: "Main"
                 pos_hint: {"right": 1, "center_y": 0.5}
 
             MDSeparator:
