Completed reveal directions screen.

--- a/gui/colorselect.kv
+++ b/gui/colorselect.kv
@@ -34,7 +34,7 @@
                 text_color: app.theme_cls.primary_color
                 theme_text_color: "Custom"
                 font_style: 'Subtitle1'
-                text: "Now select your [color=#FFFFFF]color[/color], then select the color of the following player to the [color=#FFFFFF]left[/color] of you and continuing [color=#FFFFFF]clockwise[/color]."
+                text: "Select your [color=#FFFFFF]color[/color], then select the color of the [color=#FFFFFF]following[/color] player to the [color=#FFFFFF]left[/color] of you, continuing [color=#FFFFFF]clockwise[/color]."
                 halign: "center"
                 markup: True
 
