--- a/gui/revealdirections.kv
+++ b/gui/revealdirections.kv
@@ -30,7 +30,7 @@
                 color: C("FFFFFF")
 
             MDLabel:
-                text: "Follow the [color=#FFFFFF]tracker[/color] below and [color=#FFFFFF]press[/color] the [color=#FFFFFF]button[/color] at the bottom when it's your [color=#FFFFFF]turn[/color] to check your [color=#FFFFFF]identity[/color]."
+                text: f"Follow the [color=#FFFFFF]tracker[/color] below and press the [size=22][color=#FFFFFF][font=Icons]{md_icons['account-search']}[/font][/color][/size] button at the [color=#FFFFFF]bottom[/color] when it's [color=#FFFFFF]your[/color] turn to reveal your [color=#FFFFFF]identity[/color]."
                 adaptive_height: True
                 text_color: app.theme_cls.primary_color
                 theme_text_color: "Custom"
@@ -39,7 +39,8 @@
                 markup: True
 
         MDBoxLayout:
-            padding: 10
+            padding: 5
+            adaptive_height: True
 
             MDGridLayout:
                 canvas.before:
@@ -56,7 +57,6 @@
                 id: setgrid
                 adaptive_height: True
                 padding: 20
-                spacing: 10
                 cols: 9
 
                 MDIcon:
@@ -123,9 +123,16 @@
                     halign: "center"
 
         MDBoxLayout:
-            size_hint: 1, 0.5
-        MDBoxLayout:
-        MDBoxLayout:
+            padding: 20
+            MDLabel:
+                pos_hint: {"top": 1}
+                id: nextplayer
+                text_color: C("FFFFFF")
+                halign: "center"
+                theme_text_color: "Custom"
+                font_style: "Subtitle1"
+                adaptive_height: True
+
         MDBoxLayout:
 
         MDBottomAppBar:
