Log information added to information section.

--- a/codenet.kv
+++ b/codenet.kv
@@ -134,7 +134,7 @@ WindowManager:
                 tab_indicator_anim: True
 
                 Tab:
-                    title: f"[font=Button]ROUND 1[/font]"
+                    title: f"[size=22][font=Icons]{md_icons['folder-search']}[/font][/size][size=15][font=Button] ROUND 1[/font][/size]"
                     markup: True
 
                     MDBoxLayout:
@@ -191,7 +191,7 @@ WindowManager:
                         MDBoxLayout:
 
                 Tab:
-                    title: f"[font=Button]ROUND 2[/font]"
+                    title: f"[size=22][font=Icons]{md_icons['folder-search']}[/font][/size][size=15][font=Button] ROUND 2[/font][/size]"
                     markup: True
 
                     MDBoxLayout:
@@ -289,7 +289,7 @@ WindowManager:
                                 root.r2l2()
 
                 Tab:
-                    title: f"[font=Button]ROUND 3[/font]"
+                    title: f"[size=22][font=Icons]{md_icons['folder-search']}[/font][/size][size=15][font=Button] ROUND 3[/font][/size]"
                     markup: True
 
                     MDBoxLayout:
@@ -314,7 +314,7 @@ WindowManager:
 
                             MDLabel:
                                 id: round3sum1
-                                text_color: app.theme_cls.primary_color
+                                text_color: C('1565c0')
                                 theme_text_color: "Custom"
                                 font_style: 'Subtitle2'
                                 halign: "center"
@@ -357,7 +357,7 @@ WindowManager:
 
                             MDLabel:
                                 id: round3sum2
-                                text_color: app.theme_cls.primary_color
+                                text_color: C('1565c0')
                                 theme_text_color: "Custom"
                                 font_style: 'Subtitle2'
                                 halign: "center"
