Fixed up text. Player who owns the log will never be on it.

--- a/codenet.kv
+++ b/codenet.kv
@@ -326,7 +326,7 @@ WindowManager:
                                 theme_text_color: "Custom"
                                 font_style: 'Subtitle2'
                                 halign: "center"
-                                text: "One of each faction is among the following."
+                                text: "Only one hacker is among the following."
 
 
                         MDFillRoundFlatIconButton:
@@ -369,7 +369,7 @@ WindowManager:
                                 theme_text_color: "Custom"
                                 font_style: 'Subtitle2'
                                 halign: "center"
-                                text: "One of each faction is among the following."
+                                text: "Only one hacker is among the following."
 
                         MDFillRoundFlatIconButton:
                             id: round3reveal2
