--- a/dialogs/logdialog.kv
+++ b/dialogs/logdialog.kv
@@ -94,7 +94,7 @@
                     font_style: 'Subtitle2'
                     halign: "center"
                     markup: True
-                    text: "One of each faction is among the following."
+                    text: "Only one hacker is among the following."
 
             MDBoxLayout:
                 size_hint: 1, 0.01
