--- a/gui/informationscreens/LogsScreen.kv
+++ b/gui/informationscreens/LogsScreen.kv
@@ -142,7 +142,7 @@
                     text_color: app.theme_cls.primary_color
                     theme_text_color: "Custom"
                     font_style: 'Body2'
-                    text: "Each unrevealed evidence is a player that is on the log. Once a log is uploaded, the color of the player that is on the log will be revealed, unless of course it gets corrupted. There is a probability where logs may be exactly the same. This is intended and should be taken into consideration."
+                    text: "Each folder is a player that will be on the log. Once a log is uploaded, the color of the player that is on the log will be revealed, unless of course it gets corrupted. There is a probability where logs may be exactly the same. This is an intended and should be taken into consideration."
                     markup: True
 
                 MDSeparator:
@@ -172,7 +172,7 @@
                     text_color: C('FFFFFF')
                     theme_text_color: "Custom"
                     font_style: 'H6'
-                    text: "Exclusive Evidence"
+                    text: "Player Log"
                     markup: True
 
                 MDLabel:
@@ -180,5 +180,5 @@
                     text_color: app.theme_cls.primary_color
                     theme_text_color: "Custom"
                     font_style: 'Body2'
-                    text: "Exclusive evidence can only be uploaded and viewed by the player that owns it. It also is unable to be corrupted. Players who own the log will never be on their own logs. When a hacker gets their hands on an exclusive log, they should do their best to deceive the coders since there is no way of them knowing what their log contains."
+                    text: "Player logs can only be uploaded and viewed by the player that owns it and can never be revealed by other players. Evidence for a player log cannot be corrupted. The Player who owns the log will never be on their own log. One player cannot have two player logs nor can an AI get a player log."
                     markup: True
