Alignment system has been completed.

--- a/gui/informationscreens/LogsScreen.kv
+++ b/gui/informationscreens/LogsScreen.kv
@@ -1,4 +1,4 @@
-<LogsScreen@MDScreen>
+<LogsScreen@MDScreen>:
     name: "Log"
 
     MDBoxLayout:
@@ -59,7 +59,7 @@
                 MDLabel:
                     text_color: C('FFFFFF')
                     font_style: "Body2"
-                    text: f"[color=#1565c0][size=22][font=Icons]{md_icons['folder-key']}[/font][/size][/color]: Unrevealed Exclusive Evidence"
+                    text: f"[color=#1565c0][size=22][font=Icons]{md_icons['folder-key']}[/font][/size][/color]: Exclusive Evidence"
                     theme_text_color: "Custom"
                     adaptive_height: True
                     markup: True
