--- a/codenet.kv
+++ b/codenet.kv
@@ -7,6 +7,7 @@
 #:include gui\maininformation.kv
 #:include gui\load.kv
 #:include gui\colorselect.kv
+#:include gui\endgame.kv
 #:import C kivy.utils.get_color_from_hex
 #:import SlideTransition kivy.uix.screenmanager.SlideTransition
 
@@ -18,6 +19,7 @@ WindowManager:
     ColorSelectScreen:
     PlayerReveal:
     MainWindow:
+    EndGame:
     MainInfo:
 
 <MainWindow>
